--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,16 @@ certifi==2019.11.28
 chardet==3.0.4
 chart-studio==1.0.0
 Click==7.0
+crypto==1.4.1
 cycler==0.10.0
-dash==1.14.0
+dash==2.0.0
 dash-bio==0.4.6
 dash-bootstrap-components==0.8.3
-dash-core-components==1.10.2
-dash-extensions==0.0.13
-dash-html-components==1.0.3
-dash-renderer==1.6.0
-dash-table==4.9.0
+dash-core-components==2.0.0
+dash-extensions==0.0.41
+dash-html-components==2.0.0
+dash-renderer==1.8.2
+dash-table==5.0.0
 dataframer==0.0.3
 decorator==4.4.1
 defusedxml==0.6.0
@@ -24,6 +25,7 @@ django-plotly-dash==1.1.5
 dpd-components==0.1.0
 entrypoints==0.3
 Flask==1.1.1
+Flask-Caching==1.10.1
 Flask-Compress==1.4.0
 future==0.18.2
 gunicorn==19.9.0
@@ -46,6 +48,9 @@ kiwisolver==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 mistune==0.8.4
+more-itertools==8.12.0
+mpmath==1.2.1
+Naked==0.1.31
 nbconvert==5.6.1
 nbformat==5.0.4
 notebook==6.0.3
@@ -55,10 +60,14 @@ pandas==1.0.1
 pandocfilters==1.4.2
 parso==0.6.1
 pathlib==1.0.1
-plotly==4.5.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.4.0
+plotly==5.4.0
 prometheus-client==0.7.1
 prompt-toolkit==3.0.3
 ptyprocess==0.6.0
+pycryptodome==3.11.0
 Pygments==2.5.2
 pyparsing==2.4.6
 pyrsistent==0.15.7
@@ -68,11 +77,17 @@ PyYAML==5.3
 pyzmq==18.1.1
 requests==2.22.0
 retrying==1.3.3
+scikit-learn==1.0.1
+scipy==1.7.3
 Send2Trash==1.5.0
+shellescape==3.8.1
 six==1.14.0
 sqlparse==0.3.0
+sympy==1.9
+tenacity==8.0.1
 terminado==0.8.3
 testpath==0.4.4
+threadpoolctl==3.0.0
 tornado==6.0.3
 traitlets==4.3.3
 urllib3==1.25.8
